--- a/src/assets/stylesheets/sass/_media.scss
+++ b/src/assets/stylesheets/sass/_media.scss
@@ -2,6 +2,7 @@ $phone: '(max-width: 480px)';
 $mini: '(max-width: 900px)';
 $except-phone: '(min-width: 768px)';
 $tablet-portrait: '(max-width: 767px)';
+$except-tablet-portrait: '(min-width: 768px)';
 $tablet-landscape: '(min-width: 768px) and (max-width: 979px)';
 $large-desktop: '(min-width: 1200px)';
 $max: '(max-width: 1300px)';
